--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-/* @tailwind base; */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @media (max-width: 880px) {
+    .phone-images {
+      display: none;
+      
+    }
+  }
+@media (max-width: 880px) {
+    .form-login {
+      width: 360px;
+      margin: 0 auto;
+    }
+  } */
